fix deprecation in GDB code